fixed nav menu animation, fixed graph glitch and fixed the graph flickering after configuring it with specific data options

--- a/css/dataStructuring.css
+++ b/css/dataStructuring.css
@@ -39,13 +39,13 @@
 #additionalInfo div {
     margin-bottom:10px;
     border-bottom: 1px solid white;
-    font-size:1em;
+    font-size:1.1em;
     padding:5px;
 }
 
 #additionalInfo span {
     float:right;
-    font-size: 1.2em;
+    font-size: 1.1em;
     font-weight: 900;
 }
 
@@ -89,9 +89,11 @@
 }
 
 #forecastDataCont {
-    width:720px;
-    height:100px;
-    margin-bottom:20px;
+    padding-top: 25px;
+    padding-bottom: 15px;
+    padding-left: 25px;
+    width: 720px;
+    margin-bottom: 20px;
 }
 
 #forecastType {
@@ -99,6 +101,7 @@
 }
 
 .forecastConfigure {
+    cursor: pointer;
     display: inline;
     border: none;
     padding:5px;
@@ -106,6 +109,10 @@
     color:white;
     background-color: rgb(106, 133, 210);
     box-shadow: 0px 3px 5px black;
+}
+
+.forecastConfigure:hover {
+    box-shadow: 0px 3px 7px black;
 }
 
 #forecast option, #graphData option{
@@ -118,8 +125,10 @@
     margin-bottom:50px;
 }
 
-#forecastDataCont .forecastItems {
+#forecastDataCont > .forecastItems {
+    cursor: pointer;
     box-shadow: 0px 3px 5px black;
+    transition: 0.3s;
     color:black;
     width:80px;
     height:100px;
@@ -131,6 +140,11 @@
     text-align:center;
     background-color: white;
     border-radius:5px;
+}
+
+#forecastDataCont > .forecastItems:hover {
+    transform:scale(1.3);
+    box-shadow: 0px 3px 10px black;
 }
 
 .forecastIcon {
@@ -156,6 +170,11 @@
 
 #graphDay {
     margin-top:5%;
+}
+
+#graph {
+    min-height:90%;
+    min-width:95%;
 }
 
 
@@ -215,10 +234,6 @@
 @media only screen and (min-width: 1000px) {
     #mainInfo {
         padding-top:0px;
-    }
-    
-    #forecastDay {
-        display: inline-block;
     }
     
     #forecastDataCont .forecastItems {
